2006-01-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-config.cc (init_fontconfig): call FcConfigBuildFonts()
	explicitly.

	* lily/font-config-scheme.cc (LY_DEFINE): also display font and
	config dirs. Aids debugging. 
	(display_config): also display config files.

2006-01-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bar-line.cc (calc_bar_size): inspect staff->extent (Y_AXIS)
	for determining bar size.

	* lily/staff-symbol.cc (print): place lines at distance line-positions

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	line-positions.

	* lily/staff-symbol.cc (height): new function.

	* input/regression/staff-line-positions.ly:  new file.

2006-01-06  Graham Percival  <gpermus@gmail.com>

	* input/test/add-staccato.ly: remove reference to old file.

2006-01-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (invokes_lilypond): allow . in path to
	lilypond binary too.

2006-01-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/mutopia-rules.make (Module): use LILYPOND_BINARY

2006-01-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/midi2ly.py: Bugfix: Declare datadir.

	* make/ly-rules.make:
	* make/mutopia-rules.make: Use LILYPOND_BINARY (WAS: LILYPOND, but
	that seems to be gone). Fixes make web.

	* The grand 2005-2006 replace.

	* VERSION (MY_PATCH_LEVEL): Stay on .26 for now.

2006-01-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make: set LILYPOND_BINARY variable
	(LILYPOND_BOOK_LILYPOND_FLAGS): new variable
	LILYPOND_BOOK_LILYPOND_FLAGS to hold system dependent settings,
	like -dgs-font-load.

	* Documentation/user/GNUmakefile ($(outdir)/interfaces.itexi):
	remove absolute path to lilypond binary.
	
2006-01-05 Pedro Kroeger    <kroeger@pedrokroeger.net>

	* configure.in (NCSB_DIR): fix --with-ncsb-dir option.

2006-01-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make: support LILYPOND_EXTERNAL_BINARY variable.

	* mf/GNUmakefile: remove broken dvips map symlink.
